--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="javascript:;">
+            <a class="nav-link text-white" href="#story">
               關於我們
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="javascript:;">
+            <a class="nav-link text-white" href="#contact">
               聯絡我們
             </a>
           </li>
@@ -128,7 +128,7 @@
         </div>
       </div>
     </section>
-    <section class="pt-5 mt-5">
+    <section class="pt-5 mt-5" id="list">
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-10">
@@ -326,7 +326,7 @@
         </div>
       </div>
     </section>
-    <section class="py-5">
+    <section class="py-5" id="story">
       <div class="container-fluid">
         <div class="row">
           <div class="col-md-5 col-10 d-flex justify-content-center flex-column mx-auto text-lg-start text-center">
@@ -345,7 +345,7 @@
         </div>
       </div>
     </section>
-    <section class="py-5">
+    <section class="py-5" id="contact">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-lg-8 mx-auto text-center">
@@ -499,7 +499,7 @@
             <h6 class="text-sm">公司</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="#" target="_blank">
+                <a class="nav-link" href="#story">
                   關於我們
                 </a>
               </li>
@@ -521,7 +521,7 @@
             <h6 class="text-sm">幫助 & 支援</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="#" target="_blank">
+                <a class="nav-link" href="#contact">
                   聯絡我們
                 </a>
               </li>
@@ -538,7 +538,7 @@
             <h6 class="text-sm">合作案例</h6>
             <ul class="flex-column ms-n3 nav">
               <li class="nav-item">
-                <a class="nav-link" href="#" target="_blank">
+                <a class="nav-link" href="#list" >
                   歷史借貸
                 </a>
               </li>
